# Qt-Widgets

./: .gitignore  LICENSE  README.md
BarPieChart/: dialog.cpp  dialog.h  dialog.ui
Concurrent computing/SynchronizingThreads/: computingworker.cpp  computingworker.h  main.cpp
GraphicsView/: GraphicsView.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  movableimage.cpp  movableimage.h
ImageCropper/: mainwindow.cpp  mainwindow.h  movableimage.cpp  movableimage.h
ThreadPool/: ThreadPool.pro  computingprocess.cpp  computingprocess.h  main.cpp
src/collections_and_algorithms/qlist/: CMakeLists.txt  main.cpp
src/collections_and_algorithms/qlist_vs_qvector/: CMakeLists.txt  main.cpp
src/collections_and_algorithms/qmap/: CMakeLists.txt  main.cpp
src/collections_and_algorithms/qset/: CMakeLists.txt  main.cpp
src/concurrent_computing/cmd_interface/: CMakeLists.txt  cmd_interface.cpp  cmd_interface.h  main.cpp
src/concurrent_computing/gui_thread.cpp/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui
src/concurrent_computing/spawn_process/: CMakeLists.txt  main.cpp
src/concurrent_computing/spawn_thread/: CMakeLists.txt  main.cpp
src/concurrent_computing/synchronizing_threads/: SynchronizingThreads.pro  computingworker.cpp  computingworker.h  main.cpp
src/concurrent_computing/thread_pool/: computingprocess.cpp  computingprocess.h  main.cpp
src/core/children_generator/: CMakeLists.txt  children_generator.cpp  children_generator.h  main.cpp
src/core/cpp/children_generator/: CMakeLists.txt  children_generator.cpp  children_generator.h  main.cpp
src/core/cpp/custom_signal_slots/: CMakeLists.txt  main_window.cpp  main_window.h
src/core/cpp/qvariant_and_qmetatype/: CMakeLists.txt  custom_type.cpp
src/core/cpp/smart_pointers/: CMakeLists.txt  main.cpp
src/core/python/custom_signal_slots/: main.py  main_window.ui
src/core/qvariant_and_qmetatype/: custom_type.cpp  custom_type.h  main.cpp
src/core/smart_pointers/: CMakeLists.txt  main.cpp
src/files/cpp/file_info/: CMakeLists.txt  main.cpp
src/files/cpp/file_operations/: CMakeLists.txt  main.cpp
src/files/cpp/json_serialization/: main.cpp  player.cpp  player.h
src/files/cpp/storage_info/: CMakeLists.txt  main.cpp
src/files/file_info/: CMakeLists.txt  main.cpp
src/files/file_operations/: CMakeLists.txt  main.cpp
src/files/json_serialization/: CMakeLists.txt  json_serializable_interface.h  main.cpp  player.cpp  player.h
src/files/python/file_info/: main.py
src/files/python/file_operations/: main.py
src/files/python/json_serialization/: json_serializable_interface.py  json_utils.py  main.py  player.py
src/files/python/storage_info/: main.py
src/files/storage_info/: CMakeLists.txt  main.cpp
src/graphics/cpp/image_cropper/: CMakeLists.txt  image_cropper.cpp
src/graphics/cpp/movable_image/: main.cpp  main_window.cpp  movable_image.h
src/graphics/cpp/moving_balls/: main.cpp  main_window.h  main_window.ui  movable_image.h
src/graphics/cpp/transformations/: main.cpp  main_window.cpp  main_window.ui
src/graphics/image_cropper/: CMakeLists.txt  image_cropper.cpp  image_cropper.h  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  movable_image.cpp  movableimage.cpp  movableimage.h
src/graphics/movable_image/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  movable_image.cpp  movableimage.cpp  movableimage.h
src/graphics/moving_balls/: CMakeLists.txt  bordered_scene.cpp  bordered_scene.h  main.cpp  main_window.cpp  main_window.h  movable_image.cpp  movable_image.h
src/graphics/python/image_cropper/: image_cropper.py  main_window.py
src/graphics/python/movable_image/: main_window.py  (+1 more)
src/graphics/transformations/: CMakeLists.txt  main_window.cpp  main_window.h  transformation_display.cpp  transformation_display.h
src/mvc/crypto_ranking/: temp.md
src/other/system_info/: CMakeLists.txt  main.cpp
src/other/webcam/: main_window.cpp  mainwindow.cpp  webcam.pro
src/plots/charts/: BarPieChart.pro  dialog.cpp  dialog.h  main.cpp
src/themes/classic_dark_mode/: temp.md
src/widgets/custom_tooltip/: CMakeLists.txt  main_window.cpp  main_window.ui
src/widgets/message_box/: CMakeLists.txt  main_window.cpp  main_window.ui
src/widgets/qwidget_custom_painting/: CMakeLists.txt  arrow_box.cpp  arrow_box.h  main_window.cpp  main_window.ui
src/widgets/status_bar/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  status_bar.cpp  status_bar.h
webcam/: mainwindow.cpp  mainwindow.h
(+146 files in other folders)
